# AgenticLangGraph

./: mathMcpServer.py  mcpClient.py  pyproject.toml  requirements.txt  weatherMcpServer.py
1-BasicChatbot/: 1-basicchatbot.ipynb
2-Debugging/: agent.py  debugging.ipynb
2-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Agents/: multiagent.ipynb
Langgraph/: prompt_chaining.ipynb  structure_output.ipynb  workflow_agent.ipynb
fast-api-learning/: main.py
python_practice/: basic.ipynb  basic_dsa_1.ipynb  data_type_basics.ipynb  file.ipynb  oops_concept.ipynb  string_based.ipynb
