[project]
name = "agenticlangraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.25",
    "langsmith>=0.8.0",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
